fixed errors in the notebook

--- a/notebooks/silicon.ipynb
+++ b/notebooks/silicon.ipynb
@@ -110,7 +110,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1B. Compare H2 fugacity coefficients"
+    "## 1B. Compare fO2 buffers"
    ]
   },
   {
@@ -304,7 +304,6 @@
     "    }\n",
     "\n",
     "initial_solution_first = InitialSolutionDict(first_solution, species=species)\n",
-    "initial_solution = InitialSolutionLast(initial_solution_first, species=species)\n",
     "\n",
     "planet = Planet(surface_temperature=surface_temperature, planet_mass=planet_mass, \n",
     "                  surface_radius=surface_radius)\n",
@@ -341,8 +340,9 @@
     "i=0\n",
     "for constraint, log_fO2_dIW in zip(constraints, log_fO2_dIWs):\n",
     "    \n",
-    "    print(initial_solution)\n",
+    "    initial_solution = InitialSolutionLast(initial_solution_first, species=species)\n",
     "    system.solve(constraint, initial_solution=initial_solution, max_attempts=10, factor=0.10, min_log10_pressure=-50)\n",
+    "    initial_solution_first = initial_solution\n",
     "\n",
     "    solution = system.solution.solution_dict()\n",
     "\n",
@@ -447,7 +447,7 @@
     "    constraint: SystemConstraints = SystemConstraints(\n",
     "        [\n",
     "            BufferedFugacityConstraint(O2_g, IronWustiteBuffer(log10_shift=log_fO2_dIW)),\n",
-    "            ElementMassConstraint(\"H\", value=h_kg_previous),\n",
+    "            ElementMassConstraint(\"H\", value=h_kg),\n",
     "            ElementMassConstraint(\"Si\", value=si_kg),\n",
     "        ]\n",
     "    )\n",
@@ -470,7 +470,7 @@
     "    solution['total_pressure'] = system.atmosphere_pressure\n",
     "    solution['log_fO2_dIW'] = log_fO2_dIW\n",
     "    try:  \n",
-    "        solution['melt_fraction_H'] = 2.016e-3 / h_kg_previous * (\n",
+    "        solution['melt_fraction_H'] = 2.016e-3 / h_kg * (\n",
     "            system.output['H2_g'][i]['melt_moles']+system.output['H2O_g'][i]['melt_moles']\n",
     "            )\n",
     "\n",
@@ -482,13 +482,13 @@
     "        i = i + 1\n",
     "        continue\n",
     "\n",
-    "filename = \"SiOH_nosolubility_ideal_%dK_%docean.csv\"%(surface_temperature,massH_ocean_previous)\n",
+    "filename = \"SiOH_nosolubility_ideal_%dK_%docean.csv\"%(surface_temperature,massH_ocean)\n",
     "df = pd.DataFrame(solutions)\n",
     "df.to_csv(filename, encoding='utf-8', index=False)\n",
     "\n",
     "system.failed_solves\n",
     "\n",
-    "data = system.output(\"SiOH_nosolubility_ideal_%dK_%docean\"%(surface_temperature,massH_ocean_previous), to_excel=True, to_pickle=False)"
+    "data = system.output(\"SiOH_nosolubility_ideal_%dK_%docean\"%(surface_temperature,massH_ocean), to_excel=True, to_pickle=False)"
    ]
   },
   {
@@ -504,7 +504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"SiOH_nosolubility_ideal_%dK_%docean.csv\"%(surface_temperature,massH_ocean_previous)\n",
+    "filename = \"SiOH_nosolubility_ideal_%dK_%docean.csv\"%(surface_temperature,massH_ocean)\n",
     "df = pd.read_csv(filename) \n",
     "df = df[['H2_g', 'H2O_g', 'O2_g', 'OSi_g', 'H4Si_g', 'O2Si_l']]\n",
     "insols = df.to_numpy()\n",
@@ -1534,7 +1534,7 @@
     "\n",
     "    initial_solution = InitialSolutionDict(values, species=species)\n",
     "\n",
-    "    system.solve(constraint, max_attempts=50, initial_solution=initial_solution, factor=10)\n",
+    "    system.solve(constraint, max_attempts=50, initial_solution=initial_solution)\n",
     "    \n",
     "    solution = system.solution.solution_dict()\n",
     "    solution['total_pressure'] = system.atmosphere_pressure\n",
@@ -1707,7 +1707,7 @@
     "\n",
     "    initial_solution = InitialSolutionDict(values, species=species)\n",
     "\n",
-    "    system.solve(constraint, max_attempts=50, initial_solution=initial_solution, factor=10)\n",
+    "    system.solve(constraint, max_attempts=50, initial_solution=initial_solution)\n",
     "    \n",
     "    solution = system.solution.solution_dict()\n",
     "    solution['total_pressure'] = system.atmosphere_pressure\n",
@@ -2040,7 +2040,7 @@
     "\n",
     "    initial_solution = InitialSolutionDict(values, species=species)\n",
     "\n",
-    "    system.solve(constraint, max_attempts=100, initial_solution=initial_solution, factor=10)\n",
+    "    system.solve(constraint, max_attempts=50, initial_solution=initial_solution, factor=0.1)\n",
     "    \n",
     "    solution = system.solution.solution_dict()\n",
     "    solution['total_pressure'] = system.atmosphere_pressure\n",
@@ -2125,7 +2125,7 @@
     "\n",
     "    initial_solution = InitialSolutionDict(values, species=species)\n",
     "\n",
-    "    system.solve(constraint, initial_solution=initial_solution, factor=10)\n",
+    "    system.solve(constraint, max_attempts=50, initial_solution=initial_solution)\n",
     "    \n",
     "    solution = system.solution.solution_dict()\n",
     "    solution['total_pressure'] = system.atmosphere_pressure\n",
@@ -2204,13 +2204,14 @@
     "\n",
     "solutions = []\n",
     "\n",
+    "i=0\n",
     "for (massH_ocean, constraint, insol) in zip(massH_oceans, constraints, insols):\n",
     "\n",
     "    values = {H2_g: insol[0], H2O_g: insol[1], O2_g: insol[2], OSi_g: insol[3], H4Si_g: insol[4], O2Si_l: insol[5]}\n",
     "\n",
     "    initial_solution = InitialSolutionDict(values, species=species)\n",
     "\n",
-    "    system.solve(constraint, initial_solution=initial_solution, factor=10)\n",
+    "    system.solve(constraint, max_attempts=50, initial_solution=initial_solution, factor=0.1)\n",
     "    \n",
     "    solution = system.solution.solution_dict()\n",
     "    solution['total_pressure'] = system.atmosphere_pressure\n",
@@ -2234,7 +2235,7 @@
     "\n",
     "system.failed_solves\n",
     "\n",
-    "data = system.output(\"SiOH_solubility_real_%dK_IW%dlogfO2\"%(surface_temperature,log_fO2_dIW), to_excel=True, to_pickle=False)"
+    "data = system.output(\"SiOH_solubility_real_%dK_IW%dlogfO2\"%(surface_temperature,log_fO2_dIW), to_excel=True, to_pickle=False)\n"
    ]
   },
   {
@@ -2297,27 +2298,23 @@
     "\n",
     "fig, (ax1, ax2, ax3, ax4) = plt.subplots(4, figsize=(6,12), tight_layout='True')\n",
     "\n",
-    "#ax1.axvspan(-6, -5.8, alpha=0.2, color='red')\n",
-    "ax1.axvspan(-6, -1.8, alpha=0.2, color='green')\n",
-    "ax1.axvspan(-1.8, 2, alpha=0.2, color='blue')\n",
+    "ax1.axvspan(1e-4, 1e1, alpha=0.2, color='green')\n",
     "\n",
-    "ax2.axvspan(-6, -5.6, alpha=0.2, color='red')\n",
-    "ax2.axvspan(-5.6, -0.2, alpha=0.2, color='green')\n",
-    "ax2.axvspan(-0.2, 2, alpha=0.2, color='blue')\n",
+    "ax2.axvspan(1e-4, 2e-2, alpha=0.2, color='red')\n",
+    "ax2.axvspan(2e-2, 1e1, alpha=0.2, color='green')\n",
     "\n",
-    "ax3.axvspan(-6, -4.3, alpha=0.2, color='red')\n",
-    "ax3.axvspan(-4.3, -0.6, alpha=0.2, color='green')\n",
-    "ax3.axvspan(-0.6, 2, alpha=0.2, color='blue')\n",
+    "ax3.axvspan(1e-4, 2e-2, alpha=0.2, color='red')\n",
+    "ax3.axvspan(2e-2, 1e1, alpha=0.2, color='green')\n",
     "\n",
     "#ax2 = ax1.twinx()\n",
     "\n",
     "#ax1.text(-5.8, 1e-5, 'Silicon \\nWorlds', fontsize=10, horizontalalignment='center')\n",
-    "ax1.text(-3.2, 1e-5, 'Hydrogen \\nWorlds', fontsize=10, horizontalalignment='center')\n",
-    "ax1.text(1.2, 1e-5, 'Steam \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "ax1.text(1e-1, 1e-5, 'Hydrogen \\nWorlds', fontsize=10, horizontalalignment='center')\n",
     "\n",
-    "ax2.text(-5.8, 1e-5, 'Silicon \\nWorlds', fontsize=10, horizontalalignment='center')\n",
-    "ax2.text(-2.2, 1e-5, 'Hydrogen \\nWorlds', fontsize=10, horizontalalignment='center')\n",
-    "ax2.text(1.2, 1e-5, 'Steam \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "\n",
+    "ax2.text(1e-3, 1e-5, 'Silicon \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "ax2.text(1e-1, 1e-5, 'Hydrogen \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "# ax2.text(1.2, 1e-5, 'Steam \\nWorlds', fontsize=10, horizontalalignment='center')\n",
     "\n",
     "ax1.plot(hmf, H2_ideal/tot_ideal, color='orange', lw=2, ls= '--')\n",
     "ax1.plot(hmf, H2O_ideal/tot_ideal, color='blue', lw=2, ls= '--')\n",
@@ -2326,6 +2323,7 @@
     "\n",
     "ax1.set_title(r'Ideal + no solubility')\n",
     "ax1.set_ylim([1e-6, 1.2])\n",
+    "ax1.set_xscale('log')\n",
     "ax1.set_yscale('log')\n",
     "ax1.set_xlabel(r'Hydrogen mass fraction [%]', fontsize=14)\n",
     "ax1.set_ylabel(r'Mixing Ratios', fontsize=14)\n",
@@ -2340,6 +2338,7 @@
     "\n",
     "ax2.set_title(r'Ideal + solubility') \n",
     "ax2.set_ylim([1e-6, 1.2])\n",
+    "ax2.set_xscale('log')\n",
     "ax2.set_yscale('log')\n",
     "ax2.set_xlabel(r'Hydrogen mass fraction [%]', fontsize=14)\n",
     "ax2.set_ylabel(r'Mixing Ratios', fontsize=14)\n",
@@ -2351,17 +2350,19 @@
     "\n",
     "ax3.set_title(r'Real + solubility') \n",
     "ax3.set_ylim([1e-6, 1.2])\n",
+    "ax3.set_xscale('log')\n",
     "ax3.set_yscale('log')\n",
     "ax3.set_xlabel(r'Hydrogen mass fraction [%]', fontsize=14)\n",
     "ax3.set_ylabel(r'Mixing Ratios', fontsize=14)\n",
     "\n",
-    "ax4.plot(log_fO2_dIWs, tot_ideal/1000, lw=2, ls= '--', color='black', label=r'Ideal gas (no solubility)')\n",
-    "ax4.plot(log_fO2_dIWs, tot_idealsol/1000, lw=2, ls= '-.', color='black', label=r'Ideal gas (solubility)')\n",
-    "ax4.plot(log_fO2_dIWs, tot_realsol/1000, lw=2, ls= '-', color='black', label=r'Real gas (solubility)')\n",
+    "ax4.plot(hmf, tot_ideal/1000, lw=2, ls= '--', color='black', label=r'Ideal gas (no solubility)')\n",
+    "ax4.plot(hmf, tot_idealsol/1000, lw=2, ls= '-.', color='black', label=r'Ideal gas (solubility)')\n",
+    "ax4.plot(hmf, tot_realsol/1000, lw=2, ls= '-', color='black', label=r'Real gas (solubility)')\n",
     "\n",
-    "ax4.set_ylim([1e0, 3e2])\n",
+    "ax4.set_ylim([1e-2, 3e2])\n",
+    "ax4.set_xscale('log')\n",
     "ax4.set_yscale('log')\n",
-    "ax4.set_xlabel(r'log$_{10}$ $f_{\\rm O_2}$ ($\\Delta$IW)', fontsize=14)\n",
+    "ax4.set_xlabel(r'Hydrogen mass fraction [%]', fontsize=14)\n",
     "ax4.set_ylabel(r\"$P_{\\rm surface}$ [kbar]\",  fontsize=14)\n",
     "\n",
     "ax4.set_title(r'Surface Pressure')\n",
@@ -2567,7 +2568,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"SiOH_nosolubility_real_IW%dlogfO2_%docean.csv\"%(log_fO2_dIW,massH_ocean)\n",
+    "filename = \"SiOH_nosolubility_ideal_IW%dlogfO2_%docean.csv\"%(log_fO2_dIW,massH_ocean)\n",
     "df = pd.read_csv(filename) \n",
     "df = df[['H2_g', 'H2O_g', 'O2_g', 'OSi_g', 'H4Si_g', 'O2Si_l']]\n",
     "insols = df.to_numpy()\n",
@@ -2606,7 +2607,7 @@
     "\n",
     "    setattr(system, \"planet\", planet)\n",
     "\n",
-    "    system.solve(constraint, max_attempts=50, initial_solution=initial_solution)\n",
+    "    system.solve(constraint, max_attempts=50, initial_solution=initial_solution, factor=0.1)\n",
     "    solution = system.solution.solution_dict()\n",
     "    solution['total_pressure'] = system.atmosphere_pressure\n",
     "    solution['log_fO2_dIW'] = log_fO2_dIW\n",
@@ -2691,27 +2692,21 @@
     "\n",
     "fig, (ax1, ax2, ax3, ax4) = plt.subplots(4, figsize=(6,12), tight_layout='True')\n",
     "\n",
-    "#ax1.axvspan(-6, -5.8, alpha=0.2, color='red')\n",
-    "ax1.axvspan(-6, -1.8, alpha=0.2, color='green')\n",
-    "ax1.axvspan(-1.8, 2, alpha=0.2, color='blue')\n",
+    "ax1.axvspan(2000, 4500, alpha=0.2, color='green')\n",
     "\n",
-    "ax2.axvspan(-6, -5.6, alpha=0.2, color='red')\n",
-    "ax2.axvspan(-5.6, -0.2, alpha=0.2, color='green')\n",
-    "ax2.axvspan(-0.2, 2, alpha=0.2, color='blue')\n",
+    "ax2.axvspan(2000, 3000, alpha=0.2, color='red')\n",
+    "ax2.axvspan(3000, 4500, alpha=0.2, color='green')\n",
     "\n",
-    "ax3.axvspan(-6, -4.3, alpha=0.2, color='red')\n",
-    "ax3.axvspan(-4.3, -0.6, alpha=0.2, color='green')\n",
-    "ax3.axvspan(-0.6, 2, alpha=0.2, color='blue')\n",
+    "ax3.axvspan(2000, 3580, alpha=0.2, color='red')\n",
+    "ax3.axvspan(3580, 4500, alpha=0.2, color='green')\n",
     "\n",
     "#ax2 = ax1.twinx()\n",
     "\n",
-    "#ax1.text(-5.8, 1e-5, 'Silicon \\nWorlds', fontsize=10, horizontalalignment='center')\n",
-    "ax1.text(-3.2, 1e-5, 'Hydrogen \\nWorlds', fontsize=10, horizontalalignment='center')\n",
-    "ax1.text(1.2, 1e-5, 'Steam \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "ax1.text(3000, 1e-5, 'Hydrogen \\nWorlds', fontsize=10, horizontalalignment='center')\n",
     "\n",
-    "ax2.text(-5.8, 1e-5, 'Silicon \\nWorlds', fontsize=10, horizontalalignment='center')\n",
-    "ax2.text(-2.2, 1e-5, 'Hydrogen \\nWorlds', fontsize=10, horizontalalignment='center')\n",
-    "ax2.text(1.2, 1e-5, 'Steam \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "ax2.text(2500, 1e-5, 'Silicon \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "ax2.text(3500, 1e-5, 'Hydrogen \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "\n",
     "\n",
     "ax1.plot(surface_temperatures, H2_ideal/tot_ideal, color='orange', lw=2, ls= '--')\n",
     "ax1.plot(surface_temperatures, H2O_ideal/tot_ideal, color='blue', lw=2, ls= '--')\n",
@@ -2749,13 +2744,13 @@
     "ax3.set_xlabel(r'$T_{\\rm surface}$ [K]', fontsize=14)\n",
     "ax3.set_ylabel(r'Mixing Ratios', fontsize=14)\n",
     "\n",
-    "ax4.plot(log_fO2_dIWs, tot_ideal/1000, lw=2, ls= '--', color='black', label=r'Ideal gas (no solubility)')\n",
-    "ax4.plot(log_fO2_dIWs, tot_idealsol/1000, lw=2, ls= '-.', color='black', label=r'Ideal gas (solubility)')\n",
-    "ax4.plot(log_fO2_dIWs, tot_realsol/1000, lw=2, ls= '-', color='black', label=r'Real gas (solubility)')\n",
+    "ax4.plot(surface_temperatures, tot_ideal/1000, lw=2, ls= '--', color='black', label=r'Ideal gas (no solubility)')\n",
+    "ax4.plot(surface_temperatures, tot_idealsol/1000, lw=2, ls= '-.', color='black', label=r'Real gas (no solubility)')\n",
+    "ax4.plot(surface_temperatures, tot_realsol/1000, lw=2, ls= '-', color='black', label=r'Real gas (solubility)')\n",
     "\n",
     "ax4.set_ylim([1e0, 3e2])\n",
     "ax4.set_yscale('log')\n",
-    "ax4.set_xlabel(r'log$_{10}$ $f_{\\rm O_2}$ ($\\Delta$IW)', fontsize=14)\n",
+    "ax4.set_xlabel(r'$T_{\\rm surface}$ [K]', fontsize=14)\n",
     "ax4.set_ylabel(r\"$P_{\\rm surface}$ [kbar]\",  fontsize=14)\n",
     "\n",
     "ax4.set_title(r'Surface Pressure')\n",
