--- a/notebooks/silicon.ipynb
+++ b/notebooks/silicon.ipynb
@@ -288,22 +288,12 @@
     "planet_mass=4.6*5.972e24 # kg\n",
     "surface_radius=1.5*6371000 # metre\n",
     "\n",
-    "massH_ocean_previous = 950\n",
-    "massH_ocean = 1000 # mass of H equivalent to water oceans\n",
+    "log_fO2_dIWs = np.linspace(-6, 2, num=200) \n",
+    "\n",
+    "massH_ocean = 800 # mass of H equivalent to water oceans\n",
     "h_kg: float = earth_oceans_to_kg(massH_ocean)\n",
     "\n",
     "si_kg: float = 0.1459 * planet_mass # Si = 14.59 wt% Kargel & Lewis (1993)  \n",
-    "\n",
-    "first_solution = {\n",
-    "    H2_g: 6133.037295534539,\n",
-    "    H2O_g: 69.82341826343868,\n",
-    "    O2_g: 6.09059364343756e-05,\n",
-    "    OSi_g: 342.1036405652872,\n",
-    "    H4Si_g: 163971.5617881446,\n",
-    "    O2Si_l: 0.9999999999999993\n",
-    "    }\n",
-    "\n",
-    "initial_solution_first = InitialSolutionDict(first_solution, species=species)\n",
     "\n",
     "planet = Planet(surface_temperature=surface_temperature, planet_mass=planet_mass, \n",
     "                  surface_radius=surface_radius)\n",
@@ -318,10 +308,23 @@
     "\n",
     "species = Species([H2_g, H2O_g, O2_g, H4Si_g, OSi_g, O2Si_g, O2Si_l])\n",
     "\n",
-    "log_fO2_dIWs = np.linspace(-6, 2, num=50) \n",
+    "first_solution = {\n",
+    "    H2_g: 6133.037295534539,\n",
+    "    H2O_g: 69.82341826343868,\n",
+    "    O2_g: 6.09059364343756e-05,\n",
+    "    OSi_g: 342.1036405652872,\n",
+    "    H4Si_g: 163971.5617881446,\n",
+    "    O2Si_l: 0.9999999999999993\n",
+    "    }\n",
     "\n",
-    "constraints = []\n",
+    "######## Dan to check here ######## \n",
+    "initial_solution_first = InitialSolutionDict(first_solution, species=species)\n",
     "\n",
+    "system = InteriorAtmosphereSystem(species=species, planet=planet)\n",
+    "\n",
+    "solutions = []\n",
+    "\n",
+    "i=0\n",
     "for log_fO2_dIW in log_fO2_dIWs:\n",
     "\n",
     "    constraint: SystemConstraints = SystemConstraints(\n",
@@ -331,15 +334,8 @@
     "            ElementMassConstraint(\"Si\", value=si_kg),\n",
     "        ]\n",
     "    )\n",
-    "    constraints.append(constraint)\n",
-    "\n",
-    "system = InteriorAtmosphereSystem(species=species, planet=planet)\n",
-    "\n",
-    "solutions = []\n",
-    "\n",
-    "i=0\n",
-    "for constraint, log_fO2_dIW in zip(constraints, log_fO2_dIWs):\n",
     "    \n",
+    "    ######## Dan to check here ######## \n",
     "    initial_solution = InitialSolutionLast(initial_solution_first, species=species)\n",
     "    system.solve(constraint, initial_solution=initial_solution, max_attempts=10, factor=0.10, min_log10_pressure=-50)\n",
     "    initial_solution_first = initial_solution\n",
@@ -367,7 +363,7 @@
     "\n",
     "system.failed_solves\n",
     "\n",
-    "data = system.output(\"SiOH_nosolubility_ideal_%dK_%docean\"%(surface_temperature,massH_ocean), to_excel=True, to_pickle=False)"
+    "#data = system.output(\"SiOH_nosolubility_ideal_%dK_%docean\"%(surface_temperature,massH_ocean), to_excel=True, to_pickle=False)"
    ]
   },
   {
@@ -395,8 +391,8 @@
     "planet_mass=4.6*5.972e24 # kg\n",
     "surface_radius=1.5*6371000 # metre\n",
     "\n",
-    "massH_ocean_previous = 800\n",
-    "massH_ocean = 850 # mass of H equivalent to water oceans\n",
+    "massH_ocean_previous = 750\n",
+    "massH_ocean = 800 # mass of H equivalent to water oceans\n",
     "h_kg_previous: float = earth_oceans_to_kg(massH_ocean_previous)\n",
     "h_kg: float = earth_oceans_to_kg(massH_ocean)\n",
     "\n",
@@ -418,8 +414,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#filename = \"SiOH_nosolubility_ideal_3000K_800ocean.csv\"\n",
-    "filename = \"SiOH_nosolubility_ideal_%dK_%docean.csv\"%(surface_temperature,massH_ocean_previous)\n",
+    "filename = \"SiOH_nosolubility_ideal_3000K_800ocean.csv\"\n",
+    "#filename = \"SiOH_nosolubility_ideal_%dK_%docean.csv\"%(surface_temperature,massH_ocean_previous)\n",
     "\n",
     "df = pd.read_csv(filename) \n",
     "df = df[['H2_g', 'H2O_g', 'O2_g', 'OSi_g', 'H4Si_g', 'O2Si_l']]\n",
@@ -463,7 +459,7 @@
     "    #initial_solution = InitialSolutionDict(values, species=species)\n",
     "\n",
     "    initial_solution = InitialSolutionLast(initial_solution_first, species=species)\n",
-    "    system.solve(constraint, initial_solution=initial_solution, factor=0.1)\n",
+    "    system.solve(constraint, initial_solution=initial_solution, factor=0.2)\n",
     "    initial_solution_first = initial_solution\n",
     "\n",
     "    solution = system.solution.solution_dict()\n",
@@ -1231,7 +1227,7 @@
     "ax1.plot(log_fO2_dIWs, SiO_ideal/1e3, color='brown', lw=2, ls= '--')\n",
     "\n",
     "ax1.set_title(r'Ideal + no solubility')\n",
-    "ax1.set_ylim([1e-6, 1e3])\n",
+    "ax1.set_ylim([1e-8, 2e3])\n",
     "ax1.set_yscale('log')\n",
     "ax1.set_xlabel(r'log$_{10}$ $f_{\\rm O_2}$ ($\\Delta$IW)', fontsize=14)\n",
     "ax1.set_ylabel(r'Partial Pressure [kbar]', fontsize=14)\n",
@@ -1245,7 +1241,7 @@
     "fig.suptitle(r'Surface Atm. Comp. (H = %.1f %% planet mass, $T_{\\rm surface}$ = %d K)'%(hmp,surface_temperature)) \n",
     "\n",
     "ax2.set_title(r'Ideal + solubility') \n",
-    "ax2.set_ylim([1e-6, 1e3])\n",
+    "ax2.set_ylim([1e-8, 2e3])\n",
     "ax2.set_yscale('log')\n",
     "ax2.set_xlabel(r'log$_{10}$ $f_{\\rm O_2}$ ($\\Delta$IW)', fontsize=14)\n",
     "ax2.set_ylabel(r'Partial Pressure [kbar]', fontsize=14)\n",
@@ -1256,7 +1252,7 @@
     "ax3.plot(log_fO2_dIWs, SiO_realsol/1e3, color='brown', lw=2, ls= '-', label='SiO')\n",
     "\n",
     "ax3.set_title(r'Real + solubility') \n",
-    "ax3.set_ylim([1e-6, 1e3])\n",
+    "ax3.set_ylim([1e-8, 2e3])\n",
     "ax3.set_yscale('log')\n",
     "ax3.set_xlabel(r'log$_{10}$ $f_{\\rm O_2}$ ($\\Delta$IW)', fontsize=14)\n",
     "ax3.set_ylabel(r'Partial Pressure [kbar]', fontsize=14)\n",
@@ -1265,7 +1261,7 @@
     "ax4.plot(log_fO2_dIWs, tot_idealsol/1000, lw=2, ls= '-.', color='black', label=r'Ideal gas (solubility)')\n",
     "ax4.plot(log_fO2_dIWs, tot_realsol/1000, lw=2, ls= '-', color='black', label=r'Real gas (solubility)')\n",
     "\n",
-    "ax4.set_ylim([1e0, 3e2])\n",
+    "ax4.set_ylim([1e0, 2e3])\n",
     "ax4.set_yscale('log')\n",
     "ax4.set_xlabel(r'log$_{10}$ $f_{\\rm O_2}$ ($\\Delta$IW)', fontsize=14)\n",
     "ax4.set_ylabel(r\"$P_{\\rm surface}$ [kbar]\",  fontsize=14)\n",
@@ -1380,12 +1376,12 @@
     "planet_mass=4.6*5.972e24 # kg\n",
     "surface_radius=1.5*6371000 # metre\n",
     "\n",
-    "massH_ocean = 850 # mass of H equivalent to water oceans\n",
+    "massH_ocean = 800 # mass of H equivalent to water oceans\n",
     "h_kg: float = earth_oceans_to_kg(massH_ocean)\n",
     "\n",
     "si_kg: float = 0.1459 * planet_mass # Si = 14.59 wt% Kargel & Lewis (1993)  \n",
     "\n",
-    "log_fO2_dIWs = np.linspace(-5.5, 2) "
+    "log_fO2_dIWs = np.linspace(-6, 2, num=200) "
    ]
   },
   {
@@ -1598,7 +1594,7 @@
     "species = Species([H2_g, H2O_g, O2_g, OSi_g, H4Si_g, O2Si_l, MgO_l, Mg_g])\n",
     "\n",
     "values = {H2_g: insols[0][0], H2O_g: insols[0][1], O2_g: insols[0][2], OSi_g: insols[0][3], \n",
-    "          H4Si_g: insols[0][4], O2Si_l: insols[0][5],  MgO_l: 1, Mg_g: 10}\n",
+    "          H4Si_g: insols[0][4], O2Si_l: insols[0][5],  MgO_l: insols[0][6], Mg_g: insols[0][7]}\n",
     "initial_solution_first = InitialSolutionDict(values, species=species)\n",
     "\n",
     "system = InteriorAtmosphereSystem(species=species, planet=planet)\n",
@@ -1618,7 +1614,6 @@
     "\n",
     "    # values = {H2_g: insol[0], H2O_g: insol[1], O2_g: insol[2], OSi_g: insol[3], H4Si_g: insol[4], O2Si_l: insol[5],\n",
     "    #           MgO_l: insol[6], Mg_g: insol[7]}\n",
-    "\n",
     "\n",
     "    # initial_solution = InitialSolutionDict(values, species=species)\n",
     "\n",
@@ -1686,11 +1681,13 @@
     "species = Species([H2_g, H2O_g, O2_g, OSi_g, H4Si_g, O2Si_l, MgO_l, Mg_g])\n",
     "\n",
     "values = {H2_g: insols[0][0], H2O_g: insols[0][1], O2_g: insols[0][2], OSi_g: insols[0][3], \n",
-    "          H4Si_g: insols[0][4], O2Si_l: insols[0][5],  MgO_l: 1, Mg_g: 10}\n",
+    "          H4Si_g: insols[0][4], O2Si_l: insols[0][5],  MgO_l: insols[0][6], Mg_g: insols[0][7]}\n",
     "initial_solution_first = InitialSolutionDict(values, species=species)\n",
     "\n",
-    "constraints = []\n",
+    "system = InteriorAtmosphereSystem(species=species, planet=planet)\n",
     "\n",
+    "solutions = []\n",
+    "i = 0\n",
     "for log_fO2_dIW in log_fO2_dIWs:\n",
     "\n",
     "    constraint: SystemConstraints = SystemConstraints(\n",
@@ -1701,13 +1698,6 @@
     "            ElementMassConstraint(\"Mg\", value=si_kg),\n",
     "        ]\n",
     "    )\n",
-    "    constraints.append(constraint)\n",
-    "\n",
-    "system = InteriorAtmosphereSystem(species=species, planet=planet)\n",
-    "\n",
-    "solutions = []\n",
-    "i = 0\n",
-    "for log_fO2_dIW in log_fO2_dIWs:\n",
     "\n",
     "    # values = {H2_g: insol[0], H2O_g: insol[1], O2_g: insol[2], OSi_g: insol[3], H4Si_g: insol[4], O2Si_l: insol[5],\n",
     "    #           MgO_l: insol[6], Mg_g: insol[7]}\n",
@@ -1882,6 +1872,148 @@
     "\n",
     "plt.savefig(\"SiMgOH_ideal_idealsol_realsol_%dK_%docean.pdf\"%(surface_temperature,massH_ocean), bbox_inches='tight')\n",
     "plt.savefig(\"SiMgOH_ideal_idealsol_realsol_%dK_%docean.png\"%(surface_temperature,massH_ocean), bbox_inches='tight')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plot partial pressures: ideal with no solubility + ideal with solubility + real with solubility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"SiMgOH_nosolubility_ideal_%dK_%docean.csv\"%(surface_temperature,massH_ocean)\n",
+    "df_ideal = pd.read_csv(filename) \n",
+    "ratio_ideal = df_ideal['H2_g'].values / df_ideal['H2O_g'].values\n",
+    "logfO2_ideal = df_ideal['log_fO2_dIW'].values\n",
+    "H2_ideal = df_ideal['H2_g'].values\n",
+    "H2O_ideal = df_ideal['H2O_g'].values\n",
+    "SiH4_ideal = df_ideal['H4Si_g'].values\n",
+    "SiO_ideal = df_ideal['OSi_g'].values\n",
+    "Mg_ideal = df_ideal['Mg_g'].values\n",
+    "O2_ideal = df_ideal['O2_g'].values\n",
+    "tot_ideal = df_ideal['total_pressure'].values\n",
+    "fcH2_ideal = df_ideal['fugacity_coefficient_H2'].values\n",
+    "fcH2O_ideal = df_ideal['fugacity_coefficient_H2O'].values\n",
+    "Hmelt_ideal = df_ideal['melt_fraction_H'].values\n",
+    "\n",
+    "filename = \"SiMgOH_solubility_ideal_%dK_%docean.csv\"%(surface_temperature,massH_ocean)\n",
+    "df_idealsol = pd.read_csv(filename) \n",
+    "ratio_idealsol = df_idealsol['H2_g'].values / df_idealsol['H2O_g'].values\n",
+    "logfO2_idealsol = df_idealsol['log_fO2_dIW'].values\n",
+    "H2_idealsol = df_idealsol['H2_g'].values\n",
+    "H2O_idealsol = df_idealsol['H2O_g'].values\n",
+    "SiH4_idealsol = df_idealsol['H4Si_g'].values\n",
+    "SiO_idealsol = df_idealsol['OSi_g'].values\n",
+    "Mg_idealsol = df_idealsol['Mg_g'].values\n",
+    "O2_idealsol = df_idealsol['O2_g'].values\n",
+    "tot_idealsol = df_idealsol['total_pressure'].values\n",
+    "fcH2_idealsol = df_idealsol['fugacity_coefficient_H2'].values\n",
+    "fcH2O_idealsol = df_idealsol['fugacity_coefficient_H2O'].values\n",
+    "Hmelt_idealsol = df_idealsol['melt_fraction_H'].values\n",
+    "\n",
+    "filename = \"SiMgOH_solubility_real_%dK_%docean.csv\"%(surface_temperature,massH_ocean)\n",
+    "df_realsol = pd.read_csv(filename) \n",
+    "ratio_realsol = df_realsol['H2_g'].values / df_realsol['H2O_g'].values\n",
+    "logfO2_realsol = df_realsol['log_fO2_dIW'].values\n",
+    "H2_realsol = df_realsol['H2_g'].values\n",
+    "H2O_realsol = df_realsol['H2O_g'].values\n",
+    "SiH4_realsol = df_realsol['H4Si_g'].values\n",
+    "SiO_realsol = df_realsol['OSi_g'].values\n",
+    "Mg_realsol = df_realsol['Mg_g'].values\n",
+    "O2_realsol = df_realsol['O2_g'].values\n",
+    "tot_realsol = df_realsol['total_pressure'].values\n",
+    "fcH2_realsol = df_realsol['fugacity_coefficient_H2'].values\n",
+    "fcH2O_realsol = df_realsol['fugacity_coefficient_H2O'].values\n",
+    "Hmelt_realsol = df_realsol['melt_fraction_H'].values\n",
+    "\n",
+    "hmp = h_kg / planet_mass * 100\n",
+    "\n",
+    "fig, (ax1, ax2, ax3, ax4) = plt.subplots(4, figsize=(6,12), tight_layout='True')\n",
+    "\n",
+    "#ax1.axvspan(-6, -5.8, alpha=0.2, color='red')\n",
+    "ax1.axvspan(-6, -1.8, alpha=0.2, color='green')\n",
+    "ax1.axvspan(-1.8, 2, alpha=0.2, color='blue')\n",
+    "\n",
+    "ax2.axvspan(-6, -5.6, alpha=0.2, color='red')\n",
+    "ax2.axvspan(-5.6, -0.2, alpha=0.2, color='green')\n",
+    "ax2.axvspan(-0.2, 2, alpha=0.2, color='blue')\n",
+    "\n",
+    "ax3.axvspan(-6, -4.3, alpha=0.2, color='red')\n",
+    "ax3.axvspan(-4.3, -0.6, alpha=0.2, color='green')\n",
+    "ax3.axvspan(-0.6, 2, alpha=0.2, color='blue')\n",
+    "\n",
+    "#ax2 = ax1.twinx()\n",
+    "\n",
+    "#ax1.text(-5.8, 1e-5, 'Silicon \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "ax1.text(-3.2, 1e-5, 'Hydrogen \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "ax1.text(1.2, 1e-5, 'Steam \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "\n",
+    "ax2.text(-5.8, 1e-5, 'Silicon \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "ax2.text(-2.2, 1e-5, 'Hydrogen \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "ax2.text(1.2, 1e-5, 'Steam \\nWorlds', fontsize=10, horizontalalignment='center')\n",
+    "\n",
+    "ax1.plot(log_fO2_dIWs, H2_ideal/1e3, color='orange', lw=2, ls= '--')\n",
+    "ax1.plot(log_fO2_dIWs, H2O_ideal/1e3, color='blue', lw=2, ls= '--')\n",
+    "ax1.plot(log_fO2_dIWs, SiH4_ideal/1e3, color='red', lw=2, ls= '--')\n",
+    "ax1.plot(log_fO2_dIWs, SiO_ideal/1e3, color='brown', lw=2, ls= '--')\n",
+    "ax1.plot(log_fO2_dIWs, Mg_ideal/1e3, color='cyan', lw=2, ls= '--')\n",
+    "\n",
+    "ax1.set_title(r'Ideal + no solubility')\n",
+    "ax1.set_ylim([1e-8, 2e3])\n",
+    "ax1.set_yscale('log')\n",
+    "ax1.set_xlabel(r'log$_{10}$ $f_{\\rm O_2}$ ($\\Delta$IW)', fontsize=14)\n",
+    "ax1.set_ylabel(r'Partial Pressure [kbar]', fontsize=14)\n",
+    "\n",
+    "\n",
+    "ax2.plot(log_fO2_dIWs, H2_idealsol/1e3, color='orange', lw=2, ls= '-.')\n",
+    "ax2.plot(log_fO2_dIWs, H2O_idealsol/1e3, color='blue', lw=2, ls= '-.')\n",
+    "ax2.plot(log_fO2_dIWs, SiH4_idealsol/1e3, color='red', lw=2, ls= '-.')\n",
+    "ax2.plot(log_fO2_dIWs, SiO_idealsol/1e3, color='brown', lw=2, ls= '-.')\n",
+    "ax2.plot(log_fO2_dIWs, Mg_idealsol/1e3, color='cyan', lw=2, ls= '-.')\n",
+    "\n",
+    "fig.suptitle(r'Surface Atm. Comp. (H = %.1f %% planet mass, $T_{\\rm surface}$ = %d K)'%(hmp,surface_temperature)) \n",
+    "\n",
+    "ax2.set_title(r'Ideal + solubility') \n",
+    "ax2.set_ylim([1e-8, 2e3])\n",
+    "ax2.set_yscale('log')\n",
+    "ax2.set_xlabel(r'log$_{10}$ $f_{\\rm O_2}$ ($\\Delta$IW)', fontsize=14)\n",
+    "ax2.set_ylabel(r'Partial Pressure [kbar]', fontsize=14)\n",
+    "\n",
+    "ax3.plot(log_fO2_dIWs, H2_realsol/1e3, color='orange', lw=2, ls= '-', label='H$_2$')\n",
+    "ax3.plot(log_fO2_dIWs, H2O_realsol/1e3, color='blue', lw=2, ls= '-', label='H$_2$O')\n",
+    "ax3.plot(log_fO2_dIWs, SiH4_realsol/1e3, color='red', lw=2, ls= '-', label='SiH$_4$')\n",
+    "ax3.plot(log_fO2_dIWs, SiO_realsol/1e3, color='brown', lw=2, ls= '-', label='SiO')\n",
+    "ax3.plot(log_fO2_dIWs, Mg_realsol/1e3, color='cyan', lw=2, ls= '-', label='Mg')\n",
+    "\n",
+    "ax3.set_title(r'Real + solubility') \n",
+    "ax3.set_ylim([1e-8, 2e3])\n",
+    "ax3.set_yscale('log')\n",
+    "ax3.set_xlabel(r'log$_{10}$ $f_{\\rm O_2}$ ($\\Delta$IW)', fontsize=14)\n",
+    "ax3.set_ylabel(r'Partial Pressure [kbar]', fontsize=14)\n",
+    "\n",
+    "ax4.plot(log_fO2_dIWs, tot_ideal/1000, lw=2, ls= '--', color='black', label=r'Ideal gas (no solubility)')\n",
+    "ax4.plot(log_fO2_dIWs, tot_idealsol/1000, lw=2, ls= '-.', color='black', label=r'Ideal gas (solubility)')\n",
+    "ax4.plot(log_fO2_dIWs, tot_realsol/1000, lw=2, ls= '-', color='black', label=r'Real gas (solubility)')\n",
+    "\n",
+    "ax4.set_ylim([1e0, 2e3])\n",
+    "ax4.set_yscale('log')\n",
+    "ax4.set_xlabel(r'log$_{10}$ $f_{\\rm O_2}$ ($\\Delta$IW)', fontsize=14)\n",
+    "ax4.set_ylabel(r\"$P_{\\rm surface}$ [kbar]\",  fontsize=14)\n",
+    "\n",
+    "ax4.set_title(r'Surface Pressure')\n",
+    "\n",
+    "ax3.legend(ncol=2, loc='lower left')\n",
+    "ax4.legend(ncol=1, loc='lower left')\n",
+    "\n",
+    "plt.savefig(\"SiMgOH_ideal_idealsol_realsol_%dK_%docean_pressures.pdf\"%(surface_temperature,massH_ocean), bbox_inches='tight')\n",
+    "plt.savefig(\"SiMgOH_ideal_idealsol_realsol_%dK_%docean_pressures.png\"%(surface_temperature,massH_ocean), bbox_inches='tight')\n",
     "plt.show()"
    ]
   },
@@ -2253,7 +2385,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plot ideal vs real with solubility"
+    "### Plot ideal with no solubility vs ideal with solubility vs real with solubility"
    ]
   },
   {
