updated chabrier with other EOSs

--- a/notebooks/silicon.ipynb
+++ b/notebooks/silicon.ipynb
@@ -33,13 +33,6 @@
     "from atmodeller.eos.holley import get_holley_eos_models, H2_Beattie_holley\n",
     "from atmodeller.eos.chabrier import get_chabrier_eos_models, H2_CD21\n",
     "\n",
-    "model_holland = H2_CORK_HP91\n",
-    "model_holley = H2_Beattie_holley\n",
-    "model_saxena = H2_SS92\n",
-    "model_chabrier = H2_CD21\n",
-    "\n",
-    "eos_models: dict[str, RealGas] = get_chabrier_eos_models() # get_saxena_eos_models() # get_holley_eos_models() # get_holland_eos_models()\n",
-    "\n",
     "import logging\n",
     "# logger = debug_file_logger()\n",
     "logger = debug_logger()\n",
@@ -48,7 +41,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from matplotlib.lines import Line2D"
+    "from matplotlib.lines import Line2D\n",
+    "\n",
+    "model_holland = H2_CORK_HP91\n",
+    "model_holley = H2_Beattie_holley\n",
+    "model_saxena = H2_SS92\n",
+    "model_chabrier = H2_CD21"
    ]
   },
   {
@@ -386,7 +384,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "surface_temperature=3400 # kelvin\n",
+    "surface_temperature=3000 # kelvin\n",
     "planet_mass=4.6*5.972e24 # kg\n",
     "surface_radius=1.5*6371000 # metre\n",
     "\n",
@@ -2055,7 +2053,7 @@
     "\n",
     "si_kg: float = 0.1459 * planet_mass # Si = 14.59 wt% Kargel & Lewis (1993)  \n",
     "\n",
-    "massH_oceans = np.linspace(1, 2000, num=200)"
+    "massH_oceans = np.logspace(0, 3.5, num=200)"
    ]
   },
   {
@@ -2106,14 +2104,14 @@
     "    )\n",
     "\n",
     "    initial_solution = InitialSolutionLast(initial_solution_first, species=species)\n",
-    "    system.solve(constraint, initial_solution=initial_solution, factor=0.1)\n",
+    "    system.solve(constraint, max_attempts=50, initial_solution=initial_solution, factor=0.1)\n",
     "    initial_solution_first = initial_solution\n",
-    "    \n",
-    "    solution = system.solution.solution_dict()\n",
-    "    solution['total_pressure'] = system.atmosphere_pressure\n",
-    "    solution['log_fO2_dIW'] = log_fO2_dIW\n",
-    "    try:  \n",
-    "        solution['melt_fraction_H'] = 2.016e-3 / h_kg_previous * (\n",
+    "\n",
+    "    try: \n",
+    "        solution = system.solution.solution_dict()\n",
+    "        solution['total_pressure'] = system.atmosphere_pressure\n",
+    "        solution['log_fO2_dIW'] = log_fO2_dIW\n",
+    "        solution['melt_fraction_H'] = 2.016e-3 / h_kg * (\n",
     "            system.output['H2_g'][i]['melt_moles']+system.output['H2O_g'][i]['melt_moles']\n",
     "            )\n",
     "\n",
@@ -2277,10 +2275,10 @@
     "    system.solve(constraint, initial_solution=initial_solution, factor=0.1)\n",
     "    initial_solution_first = initial_solution\n",
     "    \n",
-    "    solution = system.solution.solution_dict()\n",
-    "    solution['total_pressure'] = system.atmosphere_pressure\n",
-    "    solution['log_fO2_dIW'] = log_fO2_dIW\n",
     "    try:  \n",
+    "        solution = system.solution.solution_dict()\n",
+    "        solution['total_pressure'] = system.atmosphere_pressure\n",
+    "        solution['log_fO2_dIW'] = log_fO2_dIW\n",
     "        solution['melt_fraction_H'] = 2.016e-3 / h_kg * (\n",
     "            system.output['H2_g'][i]['melt_moles']+system.output['H2O_g'][i]['melt_moles']\n",
     "            )\n",
@@ -2362,10 +2360,10 @@
     "    system.solve(constraint, initial_solution=initial_solution, factor=0.1)\n",
     "    initial_solution_first = initial_solution\n",
     "    \n",
-    "    solution = system.solution.solution_dict()\n",
-    "    solution['total_pressure'] = system.atmosphere_pressure\n",
-    "    solution['log_fO2_dIW'] = log_fO2_dIW\n",
     "    try:  \n",
+    "        solution = system.solution.solution_dict()\n",
+    "        solution['total_pressure'] = system.atmosphere_pressure\n",
+    "        solution['log_fO2_dIW'] = log_fO2_dIW\n",
     "        solution['melt_fraction_H'] = 2.016e-3 / h_kg * (\n",
     "            system.output['H2_g'][i]['melt_moles']+system.output['H2O_g'][i]['melt_moles']\n",
     "            )\n",
