added working basic example c

--- a/notebooks/silicon.ipynb
+++ b/notebooks/silicon.ipynb
@@ -17,40 +17,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Atmodeller initialized with double precision (float64)\n"
+     ]
+    }
+   ],
    "source": [
-    "from atmodeller import debug_logger, debug_file_logger\n",
-    "from atmodeller.constraints import (\n",
-    "    SystemConstraints, ElementMassConstraint, BufferedFugacityConstraint, ActivityConstraint\n",
-    "    )\n",
-    "from atmodeller.thermodata.redox_buffers2 import (\n",
-    "    IronWustiteBuffer, IronWustiteBufferBallhaus, IronWustiteBufferFischer, \n",
-    "    IronWustiteBufferHirschmann,  IronWustiteBufferHirschmann21\n",
-    "    )\n",
-    "from atmodeller.interior_atmosphere import InteriorAtmosphereSystem, Planet\n",
-    "from atmodeller.initial_solution import InitialSolutionDict, InitialSolutionLast\n",
-    "from atmodeller.core import GasSpecies, Species, LiquidSpecies\n",
-    "from atmodeller.solubility.hydrogen_species import H2_basalt_hirschmann, H2O_peridotite_sossi\n",
-    "from atmodeller.solubility.carbon_species import (\n",
-    "    CO2_basalt_dixon, CO_basalt_yoshioka, CH4_basalt_ardia\n",
-    ")\n",
-    "from atmodeller.solubility.other_species import N2_basalt_libourel, He_basalt\n",
-    "from atmodeller.utilities import earth_oceans_to_kg\n",
-    "from atmodeller.eos.interfaces import RealGas\n",
-    "from atmodeller.eos.saxena import get_saxena_eos_models, H2_SS92\n",
-    "from atmodeller.eos.holland import get_holland_eos_models, H2_CORK_HP91\n",
-    "from atmodeller.eos.holley import get_holley_eos_models, H2_Beattie_holley\n",
-    "from atmodeller.eos.chabrier import get_chabrier_eos_models, H2_CD21, He_CD21, H2HeY0275_CD21\n",
-    "from atmodeller.eos.vanderwaals import (\n",
-    "    get_vanderwaals_eos_models, H2_Lide_vanderwaals, H4Si_Lide_vanderwaals\n",
+    "from atmodeller import (\n",
+    "    Species,\n",
+    "    InteriorAtmosphere,\n",
+    "    Planet,\n",
+    "    earth_oceans_to_hydrogen_mass,\n",
+    "    debug_logger,\n",
     ")\n",
     "\n",
-    "from atmodeller import ATMOSPHERE, GAS_CONSTANT_BAR\n",
+    "from atmodeller.thermodata import get_thermodata\n",
+    "from atmodeller.thermodata import IronWustiteBuffer\n",
+    "from atmodeller.solubility import get_solubility_models\n",
+    "solubility_models = get_solubility_models()\n",
+    "from atmodeller.eos import get_eos_models\n",
+    "eos_models = get_eos_models()\n",
     "\n",
     "import logging\n",
-    "# logger = debug_file_logger()\n",
+    "import optimistix as optx\n",
+    "from atmodeller.containers import SolverParameters\n",
+    "import numpy as np\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "\n",
     "logger = debug_logger()\n",
     "logger.setLevel(logging.INFO)\n",
     "\n",
@@ -59,16 +59,7 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.lines import Line2D\n",
     "\n",
-    "from scipy.optimize import curve_fit \n",
-    "\n",
-    "\n",
-    "model_holland = H2_CORK_HP91\n",
-    "model_holley = H2_Beattie_holley\n",
-    "model_saxena = H2_SS92\n",
-    "model_chabrier = H2_CD21\n",
-    "model_chabrier_He = He_CD21\n",
-    "model_vanderwaals = H2_Lide_vanderwaals\n",
-    "model_vanderwaals_H4Si = H4Si_Lide_vanderwaals"
+    "from scipy.optimize import curve_fit "
    ]
   },
   {
@@ -153,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,254 +338,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "planet_mass=5*5.972e24 # kg\n",
-    "surface_radius=1.53*6371000 # metre # use M-R relation from Hakim et al. (2018) Icarus\n",
+    "number_of_realisations = 10000\n",
+    "surface_temperature = 3000.0  # Must be float\n",
+    "planet_mass = 5*5.972e24 # kg\n",
+    "surface_radius = 1.53*6371000 # metre # use M-R relation from Hakim et al. (2018) Icarus\n",
+    "mantle_melt_fraction = 1.0\n",
+    "log10_max_oceans = 3\n",
     "\n",
-    "surface_temperature=3000 # kelvin\n",
-    "\n",
-    "massH_ocean = 963 # mass of H equivalent to 963 Earth water oceans\n",
-    "h_kg: float = earth_oceans_to_kg(massH_ocean)\n",
-    "\n",
+    "massH_ocean = 100 # mass of H equivalent to 963 Earth water oceans\n",
     "si_kg_magma: float = 0.1459 * planet_mass # Si = 14.59 wt% Kargel & Lewis (1993)\n",
-    "\n",
-    "planet = Planet(surface_temperature=surface_temperature, planet_mass=planet_mass, \n",
-    "                  surface_radius=surface_radius)\n",
-    "\n",
-    "# Ideal gases (no solubility)\n",
-    "H2_g = GasSpecies(\"H2\")\n",
-    "H2O_g = GasSpecies(\"H2O\")        \n",
-    "O2_g = GasSpecies(\"O2\")\n",
-    "OSi_g = GasSpecies(\"OSi\")\n",
-    "O2Si_g = GasSpecies(\"O2Si\")\n",
-    "H4Si_g = GasSpecies(\"H4Si\")\n",
-    "O2Si_l = LiquidSpecies(\"O2Si\")\n",
-    "\n",
-    "species = Species([H2_g, H2O_g, O2_g, H4Si_g, OSi_g, O2Si_g, O2Si_l])\n",
-    "\n",
-    "constraint: SystemConstraints = SystemConstraints(\n",
-    "    [\n",
-    "        #BufferedFugacityConstraint(O2_g, IronWustiteBuffer(log10_shift=-1, pressure=1)),\n",
-    "        ElementMassConstraint(\"O\", value=si_kg_magma/4*6.7),\n",
-    "        ElementMassConstraint(\"H\", value=h_kg),\n",
-    "        ElementMassConstraint(\"Si\", value=si_kg_magma),\n",
-    "#        ActivityConstraint(O2Si_l, 1),\n",
-    "    ]\n",
+    "h_kg = earth_oceans_to_hydrogen_mass(massH_ocean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[15:02:42 - atmodeller.classes             - INFO     ] - species = ['H2O_g', 'H2_g', 'O2_g', 'OSi_g', 'O2Si_g', 'H4Si_g', 'O2Si_l']\n",
+      "[15:02:42 - atmodeller.classes             - INFO     ] - reactions = {0: '2.0 H2O_g = 2.0 H2_g + 1.0 O2_g',\n",
+      " 1: '1.0 H2O_g + 1.0 OSi_g = 1.0 H2_g + 1.0 O2Si_g',\n",
+      " 2: '3.0 H2_g + 1.0 OSi_g = 1.0 H2O_g + 1.0 H4Si_g',\n",
+      " 3: '1.0 H2O_g + 1.0 OSi_g = 1.0 H2_g + 1.0 O2Si_l'}\n",
+      "[15:23:34 - atmodeller.classes             - INFO     ] - Compile time: 1252.698428 seconds\n",
+      "[15:43:25 - atmodeller.classes             - INFO     ] - Execution time: 1189.655147 seconds\n",
+      "[15:43:25 - atmodeller.output              - INFO     ] - Creating Output\n",
+      "[15:44:04 - atmodeller.output              - INFO     ] - Found O2_g so back-computing log10 shift for fO2\n",
+      "[15:44:04 - atmodeller.output              - INFO     ] - Convert all arrays to numpy\n",
+      "[15:44:35 - atmodeller.output              - INFO     ] - Output written to planet_real_withsol.xlsx\n",
+      "[15:45:03 - atmodeller.output              - INFO     ] - Found O2_g so back-computing log10 shift for fO2\n",
+      "[15:45:03 - atmodeller.output              - INFO     ] - Convert all arrays to numpy\n",
+      "[15:45:09 - atmodeller.output              - INFO     ] - Output written to planet_real_withsol.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "planet = Planet(\n",
+    "    surface_temperature=surface_temperature,\n",
+    "    planet_mass=planet_mass,\n",
+    "    surface_radius=surface_radius,\n",
+    "    mantle_melt_fraction=mantle_melt_fraction,\n",
     ")\n",
     "\n",
-    "system = InteriorAtmosphereSystem(species=species, planet=planet)\n",
+    "H2_g = Species.create_gas(\n",
+    "    \"H2_g\",\n",
+    "    solubility=solubility_models[\"H2_basalt_hirschmann12\"],\n",
+    "    # activity=eos_models[\"H2_shi92\"], \n",
+    "    activity=eos_models[\"H2_chabrier21\"],\n",
+    ")\n",
+    "H2O_g = Species.create_gas(\n",
+    "    \"H2O_g\",\n",
+    "    activity=eos_models[\"H2O_cork_holland98\"],\n",
+    ")      \n",
+    "O2_g = Species.create_gas(\"O2_g\")\n",
+    "# CO_g = Species.create_gas(\n",
+    "#     \"CO_g\",\n",
+    "#     activity=eos_models[\"CO_cork_cs_holland91\"],\n",
+    "#     solubility=solubility_models[\"CO_basalt_yoshioka19\"],\n",
+    "# )\n",
+    "# CO2_g = Species.create_gas(\n",
+    "#     \"CO2_g\",\n",
+    "#     activity=eos_models[\"CO2_cork_holland98\"],\n",
+    "#     solubility=solubility_models[\"CO2_basalt_dixon95\"],\n",
+    "# )\n",
+    "# CH4_g = Species.create_gas(\n",
+    "#     \"CH4_g\",\n",
+    "#     activity=eos_models[\"CH4_cork_cs_holland91\"],\n",
+    "#     solubility=solubility_models[\"CH4_basalt_ardia13\"],\n",
+    "# )\n",
+    "# # N2_g = Species.create_gas(\n",
+    "# #     \"N2_g\",\n",
+    "# #     activity=eos_models[\"N2_cork_cs_holland91\"],\n",
+    "# #     solubility=solubility_models[\"N2_basalt_libourel03\"],\n",
+    "# # )\n",
+    "# # Dasgupta law might be preferred for higher pressure regime\n",
+    "# N2_g = Species.create_gas(\n",
+    "#     \"N2_g\",\n",
+    "#     activity=eos_models[\"N2_cork_cs_holland91\"],\n",
+    "#     solubility=solubility_models[\"N2_basalt_dasgupta22\"],\n",
+    "# )\n",
+    "# NH3_g = Species.create_gas(\"NH3_g\")\n",
+    "SiO_g = Species.create_gas(\"SiO_g\")\n",
+    "SiO2_g = Species.create_gas(\"SiO2_g\")\n",
+    "SiH4_g = Species.create_gas(\"SiH4_g\")\n",
+    "SiO2_l = Species.create_condensed(\"SiO2_l\")\n",
     "\n",
-    "system.solve(constraint)\n",
+    "species = (H2O_g, H2_g, O2_g, SiO_g, SiO2_g, SiH4_g, SiO2_l)\n",
     "\n",
-    "print(system.output)\n",
+    "# Levenberg Marquardt is more robust when the initial guess is poor\n",
+    "solver_class = optx.LevenbergMarquardt\n",
+    "solver_parameters = SolverParameters.create(species, solver_class=solver_class)\n",
     "\n",
-    "ideal_solution = system.solution.solution_dict()\n",
+    "model_real_withsol = InteriorAtmosphere(species)\n",
     "\n",
-    "logger.info(\"Ideal solution = %s\", ideal_solution)\n",
+    "fO2_log10_shifts = np.random.uniform(-5, -2, number_of_realisations)\n",
+    "\n",
+    "\n",
+    "mass_constraints = {\n",
+    "    \"H\": h_kg,\n",
+    "#    \"O\": si_kg_magma/4*6.7,\n",
+    "    \"Si\": si_kg_magma,\n",
+    "}\n",
+    "fugacity_constraints = {O2_g.name: IronWustiteBuffer(fO2_log10_shifts)}\n",
+    "\n",
+    "model_real_withsol.initialise_solve(\n",
+    "    planet=planet,\n",
+    "    mass_constraints=mass_constraints,\n",
+    "    fugacity_constraints=fugacity_constraints,\n",
+    "    solver_parameters=solver_parameters,\n",
+    ")\n",
+    "output_real_withsol = model_real_withsol.solve()\n",
+    "\n",
+    "# Quick look at the solution\n",
+    "# solution = output_real_withsol.quick_look()\n",
+    "\n",
+    "# Get complete solution as a dictionary\n",
+    "# solution_asdict = output_real_withsol.asdict()\n",
+    "# logger.info(solution_asdict)\n",
+    "\n",
+    "# Write the complete solution to Excel\n",
+    "output_real_withsol.to_excel(\"planet_real_withsol\")\n",
+    "\n",
+    "# Write the data to a pickle file with dataframes\n",
+    "output_real_withsol.to_pickle(\"planet_real_withsol\")\n",
     "\n",
     "#system.output(\"Example c\", to_excel=True, to_pickle=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## d. Example with Element Mass Constraint for Si and Mg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "planet_mass=5*5.972e24 # kg\n",
-    "surface_radius=1.53*6371000 # metre # use M-R relation from Hakim et al. (2018) Icarus\n",
-    "\n",
-    "surface_temperature=3000 # kelvin\n",
-    "\n",
-    "massH_ocean = 963 # mass of H equivalent to 963 Earth water oceans\n",
-    "h_kg: float = earth_oceans_to_kg(massH_ocean)\n",
-    "\n",
-    "si_kg_magma: float = 0.1459 * planet_mass # Si = 14.59 wt% Kargel & Lewis (1993)\n",
-    "\n",
-    "log_fO2_dIW = -5\n",
-    "\n",
-    "planet = Planet(surface_temperature=surface_temperature, planet_mass=planet_mass, \n",
-    "                  surface_radius=surface_radius)\n",
-    "\n",
-    "# Ideal gases (no solubility)\n",
-    "H2_g = GasSpecies(\"H2\")\n",
-    "H2O_g = GasSpecies(\"H2O\")        \n",
-    "O2_g = GasSpecies(\"O2\")\n",
-    "OSi_g = GasSpecies(\"OSi\")\n",
-    "O2Si_g = GasSpecies(\"O2Si\")\n",
-    "H4Si_g = GasSpecies(\"H4Si\")\n",
-    "O2Si_l = LiquidSpecies(\"O2Si\")\n",
-    "OMg_l = LiquidSpecies(\"OMg\")\n",
-    "Mg_g = GasSpecies(\"Mg\")\n",
-    "\n",
-    "species = Species([H2_g, H2O_g, O2_g, H4Si_g, OSi_g, O2Si_g, O2Si_l, OMg_l, Mg_g])\n",
-    "\n",
-    "constraint: SystemConstraints = SystemConstraints(\n",
-    "    [\n",
-    "        BufferedFugacityConstraint(O2_g, IronWustiteBuffer(log10_shift=log_fO2_dIW, pressure=1)),\n",
-    "        ElementMassConstraint(\"H\", value=h_kg),\n",
-    "        ElementMassConstraint(\"Si\", value=si_kg_magma),\n",
-    "        ElementMassConstraint(\"Mg\", value=si_kg_magma),\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "system = InteriorAtmosphereSystem(species=species, planet=planet)\n",
-    "\n",
-    "system.solve(constraint)\n",
-    "\n",
-    "print(system.output)\n",
-    "\n",
-    "ideal_solution = system.solution.solution_dict()\n",
-    "\n",
-    "logger.info(\"Ideal solution = %s\", ideal_solution)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## e. Chabrier snippet"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from atmodeller import debug_file_logger\n",
-    "from atmodeller.constraints import SystemConstraints, ElementMassConstraint, BufferedFugacityConstraint\n",
-    "from atmodeller.thermodata.redox_buffers2 import IronWustiteBuffer\n",
-    "from atmodeller.interior_atmosphere import InteriorAtmosphereSystem, Planet\n",
-    "\n",
-    "from atmodeller.core import GasSpecies, Species, LiquidSpecies\n",
-    "from atmodeller.utilities import earth_oceans_to_kg\n",
-    "from atmodeller.eos.interfaces import RealGas\n",
-    "from atmodeller.eos.chabrier import get_chabrier_eos_models, H2_CD21, He_CD21\n",
-    "\n",
-    "import logging\n",
-    "# logger = debug_file_logger()\n",
-    "logger: logging.Logger = debug_file_logger()\n",
-    "\n",
-    "surface_temperature=3000 # kelvin\n",
-    "planet_mass=5*5.972e24 # kg\n",
-    "surface_radius=1.53*6371000 # metre\n",
-    "\n",
-    "h_kg: float = 0.01 * planet_mass \n",
-    "si_kg_magma: float = 0.1459 * planet_mass # Si = 14.59 wt% Kargel & Lewis (1993)  \n",
-    "\n",
-    "planet = Planet(surface_temperature=surface_temperature, planet_mass=planet_mass, \n",
-    "                  surface_radius=surface_radius)\n",
-    "\n",
-    "# Ideal gases (no solubility)\n",
-    "H2_g = GasSpecies(\"H2\", eos=get_chabrier_eos_models()[\"H2\"])\n",
-    "H2O_g = GasSpecies(\"H2O\")        \n",
-    "O2_g = GasSpecies(\"O2\")\n",
-    "OSi_g = GasSpecies(\"OSi\")\n",
-    "H4Si_g = GasSpecies(\"H4Si\")\n",
-    "O2Si_l = LiquidSpecies(\"O2Si\")\n",
-    "\n",
-    "species = Species([H2_g, H2O_g, O2_g, H4Si_g, OSi_g, O2Si_l])\n",
-    "\n",
-    "constraint: SystemConstraints = SystemConstraints(\n",
-    "    [\n",
-    "        BufferedFugacityConstraint(O2_g, IronWustiteBuffer(log10_shift=-4, pressure=1)),\n",
-    "        ElementMassConstraint(\"H\", value=h_kg),\n",
-    "        ElementMassConstraint(\"Si\", value=si_kg_magma),\n",
-    "    ]\n",
-    ")\n",
-    "\n",
-    "system = InteriorAtmosphereSystem(species=species, planet=planet)\n",
-    "\n",
-    "system.solve(constraint)\n",
-    "\n",
-    "solution = system.solution.solution_dict()\n",
-    "\n",
-    "system.output(\"chabrier_test\", to_excel=True, to_pickle=False)\n",
-    "\n",
-    "logger.info(\"solution = %s\", solution)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## f. Chabrier snippet loop"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from atmodeller import debug_file_logger\n",
-    "from atmodeller.constraints import SystemConstraints, ElementMassConstraint, BufferedFugacityConstraint\n",
-    "from atmodeller.thermodata.redox_buffers2 import IronWustiteBuffer\n",
-    "from atmodeller.interior_atmosphere import InteriorAtmosphereSystem, Planet\n",
-    "\n",
-    "from atmodeller.core import GasSpecies, Species, LiquidSpecies\n",
-    "from atmodeller.utilities import earth_oceans_to_kg\n",
-    "from atmodeller.eos.interfaces import RealGas\n",
-    "from atmodeller.eos.chabrier import get_chabrier_eos_models, H2_CD21, He_CD21\n",
-    "\n",
-    "import logging\n",
-    "# logger = debug_file_logger()\n",
-    "logger: logging.Logger = debug_file_logger()\n",
-    "\n",
-    "surface_temperature=3000 # kelvin\n",
-    "planet_mass=5*5.972e24 # kg\n",
-    "surface_radius=1.53*6371000 # metre\n",
-    "\n",
-    "h_kg: float = 0.01 * planet_mass \n",
-    "si_kg_magma: float = 0.1459 * planet_mass # Si = 14.59 wt% Kargel & Lewis (1993)  \n",
-    "\n",
-    "log_fO2_dIWs = np.linspace(-6, 2, num=10)\n",
-    "\n",
-    "planet = Planet(surface_temperature=surface_temperature, planet_mass=planet_mass, \n",
-    "                  surface_radius=surface_radius)\n",
-    "\n",
-    "# Ideal gases (no solubility)\n",
-    "H2_g = GasSpecies(\"H2\", eos=get_chabrier_eos_models()[\"H2\"])\n",
-    "H2O_g = GasSpecies(\"H2O\")        \n",
-    "O2_g = GasSpecies(\"O2\")\n",
-    "OSi_g = GasSpecies(\"OSi\")\n",
-    "H4Si_g = GasSpecies(\"H4Si\")\n",
-    "O2Si_l = LiquidSpecies(\"O2Si\")\n",
-    "\n",
-    "species = Species([H2_g, H2O_g, O2_g, H4Si_g, OSi_g, O2Si_l])\n",
-    "\n",
-    "system = InteriorAtmosphereSystem(species=species, planet=planet)\n",
-    "\n",
-    "solutions = []\n",
-    "for log_fO2_dIW in log_fO2_dIWs:\n",
-    "\n",
-    "    constraint: SystemConstraints = SystemConstraints(\n",
-    "        [\n",
-    "            BufferedFugacityConstraint(O2_g, IronWustiteBuffer(log10_shift=log_fO2_dIW, pressure=1)),\n",
-    "            ElementMassConstraint(\"H\", value=h_kg),\n",
-    "            ElementMassConstraint(\"Si\", value=si_kg_magma),\n",
-    "        ]\n",
-    "    )\n",
-    "\n",
-    "    system.solve(constraint)\n",
-    "\n",
-    "    solution = system.solution.solution_dict()\n",
-    "    solutions.append(solution)\n",
-    "\n",
-    "    logger.info(\"solution = %s\", solutions)\n",
-    "\n",
-    "system.output(\"chabrier_tests\", to_excel=True, to_pickle=False)"
    ]
   },
   {
