--- a/notebooks/silicon.ipynb
+++ b/notebooks/silicon.ipynb
@@ -401,8 +401,9 @@
     "SiO2_g = Species.create_gas(\"SiO2_g\")\n",
     "SiH4_g = Species.create_gas(\"SiH4_g\")\n",
     "SiO2_l = Species.create_condensed(\"SiO2_l\")\n",
+    "SiO_s = Species.create_condensed(\"SiO_s\")\n",
     "\n",
-    "species = (H2O_g, H2_g, O2_g, SiO_g, SiO2_g, SiH4_g, SiO2_l)\n",
+    "species = (H2O_g, H2_g, O2_g, SiO_g, SiO2_g, SiH4_g, SiO2_l, SiO_s)\n",
     "\n",
     "# Levenberg Marquardt is more robust when the initial guess is poor\n",
     "solver_class = optx.LevenbergMarquardt\n",
@@ -419,6 +420,103 @@
     "    \"Si\": si_kg_magma,\n",
     "}\n",
     "fugacity_constraints = {O2_g.name: IronWustiteBuffer(fO2_log10_shifts)}\n",
+    "\n",
+    "model_real_withsol.initialise_solve(\n",
+    "    planet=planet,\n",
+    "    mass_constraints=mass_constraints,\n",
+    "    fugacity_constraints=fugacity_constraints,\n",
+    "    solver_parameters=solver_parameters,\n",
+    ")\n",
+    "output_real_withsol = model_real_withsol.solve()\n",
+    "\n",
+    "# Quick look at the solution\n",
+    "# solution = output_real_withsol.quick_look()\n",
+    "\n",
+    "# Get complete solution as a dictionary\n",
+    "# solution_asdict = output_real_withsol.asdict()\n",
+    "# logger.info(solution_asdict)\n",
+    "\n",
+    "# Write the complete solution to Excel\n",
+    "output_real_withsol.to_excel(\"planet_real_withsol\")\n",
+    "\n",
+    "# Write the data to a pickle file with dataframes\n",
+    "output_real_withsol.to_pickle(\"planet_real_withsol\")\n",
+    "\n",
+    "#system.output(\"Example c\", to_excel=True, to_pickle=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## d. Vary mass constraints with atm depth"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "number_of_realisations = 50\n",
+    "surface_temperature = 3000.0  # Must be float\n",
+    "planet_mass = 10*5.972e24 # kg\n",
+    "surface_radius = 1.82*6371000 # metre # use M-R relation from Hakim et al. (2018) Icarus\n",
+    "mantle_melt_fraction = 1.0\n",
+    "log10_max_oceans = 3\n",
+    "\n",
+    "massH_ocean = 100 # mass of H equivalent to 963 Earth water oceans\n",
+    "si_kg_magma: float = 0.1459 * planet_mass # Si = 14.59 wt% Kargel & Lewis (1993)\n",
+    "h_kg = earth_oceans_to_hydrogen_mass(massH_ocean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planet = Planet(\n",
+    "    surface_temperature=surface_temperature,\n",
+    "    planet_mass=planet_mass,\n",
+    "    surface_radius=surface_radius,\n",
+    "    mantle_melt_fraction=mantle_melt_fraction,\n",
+    ")\n",
+    "\n",
+    "H2_g = Species.create_gas(\n",
+    "    \"H2_g\",\n",
+    "#    solubility=solubility_models[\"H2_basalt_hirschmann12\"],\n",
+    "    #activity=eos_models[\"H2_shi92\"], \n",
+    "    activity=eos_models[\"H2_chabrier21\"],\n",
+    ")\n",
+    "H2O_g = Species.create_gas(\n",
+    "    \"H2O_g\",\n",
+    "#    solubility=solubility_models[\"H2_basalt_hirschmann12\"],\n",
+    "    activity=eos_models[\"H2O_cork_holland98\"],\n",
+    ")      \n",
+    "O2_g = Species.create_gas(\"O2_g\")\n",
+    "SiO_g = Species.create_gas(\"SiO_g\")\n",
+    "SiO2_g = Species.create_gas(\"SiO2_g\")\n",
+    "SiH4_g = Species.create_gas(\"SiH4_g\")\n",
+    "SiO2_l = Species.create_condensed(\"SiO2_l\")\n",
+    "\n",
+    "species = (H2O_g, H2_g, O2_g, SiO_g, SiO2_g, SiH4_g, SiO2_l)\n",
+    "\n",
+    "# Levenberg Marquardt is more robust when the initial guess is poor\n",
+    "solver_class = optx.LevenbergMarquardt\n",
+    "solver_parameters = SolverParameters.create(species, solver_class=solver_class)\n",
+    "\n",
+    "model_real_withsol = InteriorAtmosphere(species)\n",
+    "\n",
+    "mass_fractions = np.random.uniform(-10, 0, number_of_realisations)\n",
+    "\n",
+    "\n",
+    "mass_constraints = {\n",
+    "    \"H\": h_kg * mass_fractions,\n",
+    "#    \"O\": si_kg_magma/4*6.7,\n",
+    "    \"Si\": si_kg_magma * mass_fractions,\n",
+    "}\n",
+    "fugacity_constraints = {O2_g.name: IronWustiteBuffer(-6)}\n",
     "\n",
     "model_real_withsol.initialise_solve(\n",
     "    planet=planet,\n",
@@ -550,6 +648,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "number_of_realisations = 50\n",
+    "surface_temperature = 3000.0  # Must be float\n",
+    "planet_mass = 10*5.972e24 # kg\n",
+    "surface_radius = 1.82*6371000 # metre # use M-R relation from Hakim et al. (2018) Icarus\n",
+    "mantle_melt_fraction = 1.0\n",
+    "log10_max_oceans = 3\n",
+    "\n",
+    "massH_ocean = 963*2 # mass of H equivalent to 963 Earth water oceans\n",
+    "si_kg_magma: float = 0.1459 * planet_mass # Si = 14.59 wt% Kargel & Lewis (1993)\n",
+    "h_kg: float = earth_oceans_to_hydrogen_mass(massH_ocean)\n",
+    "\n",
+    "si_kg_solar: float = h_kg * 0.07 / 73.9 # Lodders et al. (2009) Springer book chapter Table 8\n",
+    "\n",
+    "si_kg_magma: float = 0.1459 * planet_mass # Si = 14.59 wt% Kargel & Lewis (1993)\n",
+    "\n",
+    "log_fO2_dIWs = np.linspace(-6, 2, num=200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "planet_mass=10*5.972e24 # kg\n",
     "surface_radius=1.82*6371000 # metre # use M-R relation from Hakim et al. (2018) Icarus\n",
     "\n",
@@ -579,43 +701,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "planet = Planet(surface_temperature=surface_temperature, planet_mass=planet_mass, \n",
-    "                  surface_radius=surface_radius)\n",
+    "planet = Planet(\n",
+    "    surface_temperature=surface_temperature,\n",
+    "    planet_mass=planet_mass,\n",
+    "    surface_radius=surface_radius,\n",
+    "    mantle_melt_fraction=mantle_melt_fraction,\n",
+    ")\n",
     "\n",
-    "# Ideal gases (no solubility)\n",
-    "H2_g = GasSpecies(\"H2\")\n",
-    "H2O_g = GasSpecies(\"H2O\")        \n",
-    "O2_g = GasSpecies(\"O2\")\n",
-    "OSi_g = GasSpecies(\"OSi\")\n",
-    "H4Si_g = GasSpecies(\"H4Si\")\n",
-    "#O2Si_l = LiquidSpecies(\"O2Si\")\n",
+    "H2_g = Species.create_gas(\n",
+    "    \"H2_g\",\n",
+    "    solubility=solubility_models[\"H2_basalt_hirschmann12\"],\n",
+    "    #activity=eos_models[\"H2_shi92\"], \n",
+    "    activity=eos_models[\"H2_chabrier21\"],\n",
+    ")\n",
+    "H2O_g = Species.create_gas(\n",
+    "    \"H2O_g\",\n",
+    "    activity=eos_models[\"H2O_cork_holland98\"],\n",
+    ")      \n",
+    "O2_g = Species.create_gas(\"O2_g\")\n",
+    "SiO_g = Species.create_gas(\"SiO_g\")\n",
+    "SiH4_g = Species.create_gas(\"SiH4_g\")\n",
+    "#SiO2_l = Species.create_condensed(\"SiO2_l\")\n",
     "\n",
-    "species = Species([H2_g, H2O_g, O2_g, H4Si_g, OSi_g])\n",
+    "species = (H2O_g, H2_g, O2_g, SiO_g, SiH4_g, SiO2_l)\n",
     "\n",
-    "first_solution = {H2_g: 1e5, H2O_g: 1e0, O2_g: 1e-10, \n",
-    "                  OSi_g: 1e-6, H4Si_g: 1e-4}\n",
+    "# Levenberg Marquardt is more robust when the initial guess is poor\n",
+    "solver_class = optx.LevenbergMarquardt\n",
+    "solver_parameters = SolverParameters.create(species, solver_class=solver_class)\n",
     "\n",
-    "initial_solution = InitialSolutionLast(InitialSolutionDict(first_solution, species=species), \n",
-    "                                       species=species)\n",
+    "model_real_withsol = InteriorAtmosphere(species)\n",
     "\n",
-    "system = InteriorAtmosphereSystem(species=species, planet=planet)\n",
+    "fO2_log10_shifts = np.random.uniform(-6, -2, number_of_realisations)\n",
     "\n",
-    "for log_fO2_dIW in log_fO2_dIWs:\n",
     "\n",
-    "    constraint: SystemConstraints = SystemConstraints(\n",
-    "        [\n",
-    "            BufferedFugacityConstraint(O2_g, IronWustiteBuffer(log10_shift=log_fO2_dIW, \n",
-    "                                                               pressure=1)),\n",
-    "            ElementMassConstraint(\"H\", value=h_kg),\n",
-    "            ElementMassConstraint(\"Si\", value=si_kg_solar),\n",
-    "        ]\n",
-    "    )\n",
+    "mass_constraints = {\n",
+    "    \"H\": h_kg,\n",
+    "#    \"O\": si_kg_magma/4*6.7,\n",
+    "    \"Si\": si_kg_magma,\n",
+    "}\n",
+    "fugacity_constraints = {O2_g.name: IronWustiteBuffer(fO2_log10_shifts)}\n",
     "\n",
-    "    system.solve(constraint, initial_solution=initial_solution, factor=0.1)\n",
+    "model_real_withsol.initialise_solve(\n",
+    "    planet=planet,\n",
+    "    mass_constraints=mass_constraints,\n",
+    "    fugacity_constraints=fugacity_constraints,\n",
+    "    solver_parameters=solver_parameters,\n",
+    ")\n",
+    "output_real_withsol = model_real_withsol.solve()\n",
+    "\n",
+    "# Quick look at the solution\n",
+    "# solution = output_real_withsol.quick_look()\n",
+    "\n",
+    "# Get complete solution as a dictionary\n",
+    "# solution_asdict = output_real_withsol.asdict()\n",
+    "# logger.info(solution_asdict)\n",
+    "\n",
+    "# Write the complete solution to Excel\n",
+    "output_real_withsol.to_excel(\"planet_real_withsol\")\n",
+    "\n",
+    "# Write the data to a pickle file with dataframes\n",
+    "output_real_withsol.to_pickle(\"planet_real_withsol\")\n",
     "\n",
     "system.failed_solves\n",
     "\n",
-    "system.output(\"SiOH_nomagma_ideal_%dK_%docean\"%(surface_temperature,massH_ocean), \n",
+    "system.output(\"SiOH_nosolubility_ideal_%dK_%docean\"%(surface_temperature,massH_ocean), \n",
     "              to_excel=True, to_pickle=False)"
    ]
   },
