minimal working example d

--- a/notebooks/silicon.ipynb
+++ b/notebooks/silicon.ipynb
@@ -401,9 +401,8 @@
     "SiO2_g = Species.create_gas(\"SiO2_g\")\n",
     "SiH4_g = Species.create_gas(\"SiH4_g\")\n",
     "SiO2_l = Species.create_condensed(\"SiO2_l\")\n",
-    "SiO_s = Species.create_condensed(\"SiO_s\")\n",
     "\n",
-    "species = (H2O_g, H2_g, O2_g, SiO_g, SiO2_g, SiH4_g, SiO2_l, SiO_s)\n",
+    "species = (H2O_g, H2_g, O2_g, SiO_g, SiO2_g, SiH4_g, SiO2_l)\n",
     "\n",
     "# Levenberg Marquardt is more robust when the initial guess is poor\n",
     "solver_class = optx.LevenbergMarquardt\n",
@@ -440,9 +439,7 @@
     "output_real_withsol.to_excel(\"planet_real_withsol\")\n",
     "\n",
     "# Write the data to a pickle file with dataframes\n",
-    "output_real_withsol.to_pickle(\"planet_real_withsol\")\n",
-    "\n",
-    "#system.output(\"Example c\", to_excel=True, to_pickle=False)"
+    "output_real_withsol.to_pickle(\"planet_real_withsol\")"
    ]
   },
   {
@@ -513,15 +510,15 @@
     "\n",
     "mass_constraints = {\n",
     "    \"H\": h_kg * mass_fractions,\n",
-    "#    \"O\": si_kg_magma/4*6.7,\n",
+    "    \"O\": 4.96286191942125E+24 * mass_fractions,\n",
     "    \"Si\": si_kg_magma * mass_fractions,\n",
     "}\n",
-    "fugacity_constraints = {O2_g.name: IronWustiteBuffer(-6)}\n",
+    "#fugacity_constraints = {O2_g.name: IronWustiteBuffer(-5)}\n",
     "\n",
     "model_real_withsol.initialise_solve(\n",
     "    planet=planet,\n",
     "    mass_constraints=mass_constraints,\n",
-    "    fugacity_constraints=fugacity_constraints,\n",
+    "    #fugacity_constraints=fugacity_constraints,\n",
     "    solver_parameters=solver_parameters,\n",
     ")\n",
     "output_real_withsol = model_real_withsol.solve()\n",
